plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.1'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.servebeer.djfil'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = JavaVersion.VERSION_1_8
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'javax.servlet:javax.servlet-api:4.0.1'
	implementation('org.springframework.boot:spring-boot-starter-log4j2') {
    	exclude group: 'org.apache.logging.log4j', module: 'log4j-slf4j-impl'
	}
	implementation('org.apache.spark:spark-core_2.12:3.4.1') {
    	exclude group: 'org.apache.logging.log4j', module: 'log4j-slf4j-impl'
	}
	implementation('org.apache.spark:spark-sql_2.12:3.4.1') {
    	exclude group: 'org.apache.logging.log4j', module: 'log4j-slf4j-impl'
	}
	implementation 'com.google.code.gson:gson:2.10.1'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

task runApp(type: JavaExec) {
	classpath = sourceSets.main.runtimeClasspath
	main = 'com.servebeer.djfil.SimpleApp'
	jvmArgs = [
		'--add-opens=java.base/sun.nio.ch=ALL-UNNAMED'
	]
}

tasks.named('test') {
	useJUnitPlatform()
}
